0.33

- Put a $VERSION in every .pm file matching Fey.pm


0.32    2009-09-10

- Shut up some warnings from the next Moose (0.90).

- Improved docs on WHERE clauses, especially on what can be compared (columns,
  literals, etc.). See Fey::SQL for details. Requested by Martin. RT #48677.

- Tightened up checking of WHERE clause components. Previously an unblessed
  reference would've ended up getting stringified, now it will be rejected.


0.31    2009-08-18

- Added a new (empty) role, Fey::Role::SQL::ReturnsData. Use this as a
  constraint any place you might be checking if an object
  ->isa('Fey::SQL::Select'). This role is applied to any SQL query that
  returns data, such as SELECTs, UNIONs, etc.

- Added Fey::SQL::Select->distinct_on($column).


0.30    2009-08-12

- Allow the first argument to ->limit to be undef, so you can do
  ->limit( undef, 20 ), which produces SQL like "OFFSET 20".


0.29    2009-08-12

- Allow subselects on the right hand side of a where clause comparison using
  =, !=, or <>.


0.28    2009-05-14

- Fixed the tests to pass with newer Moose. No code changes.


0.27    2009-04-18

- All SQL objects now implement a clone() method.


0.26    2009-04-04

- Some uses of Fey::SQL::Fragment::SubSelect were still lingering in
  the code, so a fresh install failed. Reported by Chad Granum.


0.25    2009-04-01

- Major internals changes to how aliasable things are created and
  used. Added two new roles, Fey::Role::MakesAliasObjects, and
  Fey::Role::HasAliasName. All literals can now be aliased (including
  Terms). A subselect is now just a Fey::SQL::Select object
  internally, which makes the internals much cleaner. This also means
  that a Fey::SQL::Select has an ->alias_name. Implemented by Dieter
  Pearcey.

- Added support for "NULLS FIRST/LAST" in ORDER BY
  clauses. Implemented by Erik Rijkers. RT #44656.


0.24    2009-03-26

- Support for UNION, INTERSECT, and EXCEPT queries. Implemented by
  Dieter Pearcey.


0.23    2009-03-23
