@@ -301,7 +301,9 @@ sub aliased_columns
     my $self   = shift;
     my $prefix = shift;
 
-    return map { $self->aliased_column( $prefix, $_ ) } @_;
+    my @names = @_ ? @_ : map { $_->name() } $self->columns();
+
+    return map { $self->aliased_column( $prefix, $_ ) } @names;
 }
 
 sub sql
@@ -474,6 +476,9 @@ column's real name.
 This method returns a list of new L<Fey::Column::Alias> objects. The
 alias names are generated by concatenating the specified prefix and
 the column's real name.
+
+If you omit the list of column names, it returns aliases for I<all> of the
+columns in table, in same order as returned by C<< $table->columns() >>.
 
 =head2 $table->sql()
 
